<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.mulatschaktracker.ui.home.HomeFragment"
        android:label="@string/title_games"
        tools:layout="@layout/fragment_games" />

    <fragment
        android:id="@+id/navigation_statistic"
        android:name="com.example.mulatschaktracker.ui.statistics.StatisticsFragment"
        android:label="@string/title_statistics"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/navigation_History"
        android:name="com.example.mulatschaktracker.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />


    <fragment
        android:id="@+id/navigation_Tipps"
        android:name="com.example.mulatschaktracker.ui.tipps.TippsFragment"
        android:label="@string/title_tips"
        tools:layout="@layout/fragment_tipps" />

    <fragment
        android:id="@+id/navigation_Options"
        android:name="com.example.mulatschaktracker.ui.options.OptionsFragment"
        android:label="@string/title_options"
        tools:layout="@layout/fragment_options" />


</navigation>