<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/enterPlayerTextView"
        android:layout_width="210dp"
        android:layout_height="61dp"
        android:layout_marginStart="119dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="119dp"
        android:layout_marginBottom="25dp"
        android:gravity="center"
        android:text="@string/Victory"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/Player1_EditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/player3_result"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/ThirdPlace"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player2_result" />

    <EditText
        android:id="@+id/player4_result"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/FourthPlace"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player3_result" />

    <EditText
        android:id="@+id/player2_result"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/SecondPlace"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player1_result" />

    <EditText
        android:id="@+id/player1_result"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/FirstPlace"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterPlayerTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>