<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartNewGame">


    <EditText
        android:id="@+id/Player1_EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/Player1"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/Player2_EditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EnterPlayerTextView" />

    <EditText
        android:id="@+id/Player2_EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/Player2"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/Player3_EditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Player1_EditText" />


    <EditText
        android:id="@+id/Player3_EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/Player3"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/Player4_EditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Player2_EditText" />

    <EditText
        android:id="@+id/Player4_EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="68dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/Player4"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/StartNewGameButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Player3_EditText" />

    <TextView
        android:id="@+id/EnterPlayerTextView"
        android:layout_width="173dp"
        android:layout_height="30dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="119dp"
        android:layout_marginBottom="25dp"
        android:text="@string/EnterNewPlayer"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/Player1_EditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/StartNewGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="143dp"
        android:layout_marginBottom="175dp"
        android:text="Start Game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>

